# serializer version: 1
# name: test_compile_fix_disallowed_import
  dict({
    'fixed_code': '''
      from dataclasses import dataclass, field
      
      INSTRUCTION_KNOWLEDGE_ITEM = "Extract concise, factual knowledge from the source text and avoid speculation."
      INSTRUCTION_QUERY = "Create a focused retrieval query that captures the user's information need."
      INSTRUCTION_RESPONSE = "Answer clearly using only retrieved knowledge, and keep the response concise."
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          raw: str = field(metadata={"description": "Primary knowledge content extracted from the source text."})
      
      
      @dataclass
      class Query:
          raw: str = field(metadata={"description": "User query text used to retrieve relevant stored knowledge."})
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, item: KnowledgeItem, raw_text: str = "") -> None:
              self.store.append(item.raw)
              self.toolkit.logger.debug(f"Stored: {item.raw[:80]}")
      
          def read(self, query: Query) -> str:
              return ("\n".join(self.store)[:1000]) if self.store else "No information stored."
  
    ''',
    'original_error_details': 'Disallowed import: numpy',
    'original_error_type': 'Import whitelist violation',
  })
# ---
# name: test_compile_fix_runtime_bug
  dict({
    'fixed_code': '''
      from dataclasses import dataclass, field
      
      INSTRUCTION_KNOWLEDGE_ITEM = "Extract concise, factual knowledge from the provided text."
      INSTRUCTION_QUERY = "Create a focused retrieval query that captures the user's information need."
      INSTRUCTION_RESPONSE = "Answer clearly and briefly using only relevant stored knowledge."
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          raw: str = field(metadata={"description": "Canonical knowledge text to store."})
      
      
      @dataclass
      class Query:
          raw: str = field(metadata={"description": "Search text describing what to retrieve."})
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, item: KnowledgeItem, raw_text: str = "") -> None:
              processed = (item.raw or raw_text or "").strip()
              self.store.append(processed)
      
          def read(self, query: Query) -> str:
              result = "\n".join(self.store) if self.store else "No information stored."
              return result[:1000]
  
    ''',
    'original_smoke_error': "Runtime: name 'process_text' is not defined",
  })
# ---
# name: test_end_to_end_offline
  dict({
    'first_output': 'Paris',
    'num_failed': 0,
    'num_outputs': 1,
    'score': 1.0,
  })
# ---
# name: test_end_to_end_online
  dict({
    'logs': list([
      'Val score: 1.000 (1 cases)',
    ]),
    'num_failed': 0,
    'num_outputs': 1,
    'score': 1.0,
    'val_output': 'green apple',
  })
# ---
# name: test_knowledge_item_generation
  dict({
    'output': '{"summary": "The capital of France is Paris."}',
    'prompt': '''
      Given the following text, create a KnowledgeItem to store this information in memory.
      
      Text: The capital of France is Paris.
      
      The KnowledgeItem must conform to this schema:
      // KnowledgeItem: A summary of what was learnt from the source text.
      {
        "summary": "..."  // str, What you have learnt from the text
      }
      
      Output ONLY a valid JSON object matching the schema fields. No explanation.
    ''',
  })
# ---
# name: test_knowledge_item_with_feedback
  dict({
    'output': '''
      {
        "summary": "The previous answer '0.0 (incorrect)' indicates that 'Paris' is the correct answer to a specific, unstated question. This reinforces the need to verify facts against authoritative sources when answering questions about well-established information."
      }
    ''',
    'prompt': '''
      Evaluation result: Score: 0.0 (incorrect)
      Ground truth: Paris
      
      Based on this feedback, generate a knowledge item to write into memory.
      
      The knowledge item must be a JSON object matching this schema:
      // KnowledgeItem: A summary of what was learnt from the source text.
      {
        "summary": "..."  // str, What you have learnt from the text
      }
      
      Respond with the JSON only.
    ''',
  })
# ---
# name: test_patch_generation_compile_fix
  dict({
    'fixed_code': '''
      from dataclasses import dataclass
      
      INSTRUCTION_KNOWLEDGE_ITEM = ""
      INSTRUCTION_QUERY = ""
      INSTRUCTION_RESPONSE = ""
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          raw: str
      
      
      @dataclass
      class Query:
          raw: str
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, item: KnowledgeItem) -> None:
              self.store.append(item.raw)
      
          def read(self, query: Query) -> str:
              # Bug: missing closing parenthesis
              return "\n".join(self.store[:5]) if self.store else "No information stored."
  
    ''',
    'output': '''
      *** Begin Patch
      *** Update File: program.py
      @@
           def read(self, query: Query) -> str:
               # Bug: missing closing parenthesis
      -        return "\n".join(self.store[:5] if self.store else "No information stored."
      +        return "\n".join(self.store[:5]) if self.store else "No information stored."
      *** End Patch
    ''',
    'prompt': '''
      You are an expert Python programmer. A Knowledge Base Program failed to compile or run.
      Fix the error and output your fix as a patch.
      
      You are designing a Knowledge Base Program that implements three classes:
      
      1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
         - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
         - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
      
      2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - Same JSON-compatible type restriction and field description support as KnowledgeItem
      
      3. **KnowledgeBase** (class): The core knowledge base system.
         - `__init__(self, toolkit)`: Receives a Toolkit with:
           - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
           - `toolkit.chroma`: chromadb ephemeral client
           - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
           - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
         - `write(self, item: KnowledgeItem, raw_text: str) -> None`: Store information. `raw_text` is the original source text that produced the knowledge item.
         - `read(self, query: Query) -> str`: Retrieve relevant information as a string
      
      Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
      
      ## Runtime Constraints
      
      These limits are enforced during evaluation. Violating them results in score = 0.
      
      - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
      - **`write()` / `read()` timeout**: Each call must complete within **15 seconds**. Avoid expensive computation in these methods.
      - **`toolkit.llm_completion()` budget**: At most **1 LLM call per `write()` or `read()` invocation**. The budget resets before each call. Use the single call wisely (e.g., query-focused summarization in `read()`); prefer deterministic retrieval (SQL, text matching) when possible.
      
      ## Instruction Constants (required)
      
      Four module-level string constants provide the natural-language instructions used in task agent prompts:
      
      - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
      - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Use this to steer the task agent's behavior and decision-making. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
      
      INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
      
      
      Rules:
      1. Output ONLY the fix as a patch. No explanation needed.
      2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
      3. Only use allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb.
      4. Make minimal changes — fix ONLY the broken line(s). Do NOT add new fields, imports, or restructure the code.
      
      Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
      
      Format:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ <optional context hint>
       context line (1-2 lines before change)
      -removed line
      +added line
       context line (1-2 lines after change)
      *** End Patch
      ```
      
      Rules:
      - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
      - Include 1-2 context lines before and after each change for anchoring.
      - Multiple hunks are allowed within one `*** Update File` block.
      
      Example — replacing a return value:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ return statement
       def read(self, query: Query) -> str:
      -    return "\n".join(self.store)
      +    return "\n".join(self.store[-5:])
      *** End Patch
      ```
      
      ## Broken Code
      
      ```python
      from dataclasses import dataclass
      
      INSTRUCTION_KNOWLEDGE_ITEM = ""
      INSTRUCTION_QUERY = ""
      INSTRUCTION_RESPONSE = ""
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          raw: str
      
      
      @dataclass
      class Query:
          raw: str
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, item: KnowledgeItem) -> None:
              self.store.append(item.raw)
      
          def read(self, query: Query) -> str:
              # Bug: missing closing parenthesis
              return "\n".join(self.store[:5] if self.store else "No information stored."
      
      ```
      
      ## Error
      
      **Syntax error**: '(' was never closed (<unknown>, line 29)
      
      Fix the error and output your fix as a patch.
    ''',
  })
# ---
# name: test_patch_generation_reflection
  dict({
    'output': '''
      Diagnosis
      - **Root cause of failure:** `read()` does not actually retrieve by query relevance. It returns the first 500 chars of all summaries plus first 500 chars of all raw observations.  
      - In realistic memory sizes, the relevant fact (e.g., “Alice’s favorite color is blue”) can be outside those truncated prefixes, so the downstream answer model gets no useful evidence and responds “I don't know.”
      - Secondary issue: instructions are too generic, so extracted/query data may be less precise than needed for exact fact lookup.
      
      Here is a minimal targeted fix: add deterministic keyword-based retrieval over stored items (using SQLite), return only top-matching snippets, and strengthen instructions.
      
      ```patch
      *** Begin Patch
      *** Update File: program.py
      @@
      -from dataclasses import dataclass, field
      +import re
      +from dataclasses import dataclass, field
       
      -INSTRUCTION_KNOWLEDGE_ITEM = "Summarize the key information from the text."
      -INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      -INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      -ALWAYS_ON_KNOWLEDGE = ""
      +INSTRUCTION_KNOWLEDGE_ITEM = "Extract concrete, checkable facts from the text. Prefer short factual statements with names, attributes, values, dates, and relationships."
      +INSTRUCTION_QUERY = "Convert the user question into a focused search query using the key entities, attributes, and terms needed to find an exact fact."
      +INSTRUCTION_RESPONSE = "Answer using only retrieved knowledge. Be concise and factual; if the fact is missing, reply exactly: I don't know."
      +ALWAYS_ON_KNOWLEDGE = "Prioritize exact entity-attribute-value facts (e.g., 'Alice favorite color blue') and avoid speculation."
      @@
       class KnowledgeBase:
      -    """Simple append-all / return-all knowledge base."""
      +    """Lightweight SQLite-backed KB with deterministic lexical retrieval."""
       
           def __init__(self, toolkit):
               self.toolkit = toolkit
      -        self.summaries: list[str] = []
      -        self.observations: list[str] = []
      +        # We use sqlite so data handling is deterministic and fast under tight runtime limits.
      +        self.db = toolkit.db
      +        self.db.execute(
      +            """
      +            CREATE TABLE IF NOT EXISTS kb_items (
      +                id INTEGER PRIMARY KEY AUTOINCREMENT,
      +                summary TEXT NOT NULL,
      +                raw_text TEXT NOT NULL
      +            )
      +            """
      +        )
      +        self.db.commit()
      +        self.toolkit.logger.debug("KnowledgeBase initialized with table kb_items")
      +
      +    def _normalize(self, text: str) -> str:
      +        # Normalization improves token matching robustness across punctuation/casing variants.
      +        return re.sub(r"\s+", " ", (text or "").strip())
      +
      +    def _tokens(self, text: str) -> list[str]:
      +        # Simple lexical tokens are cheap and work well for factual lookup.
      +        return re.findall(r"[a-z0-9]+", text.lower())
       
           def write(self, item: KnowledgeItem, raw_text: str) -> None:
      -        self.summaries.append(item.summary)
      -        self.observations.append(raw_text)
      -        self.toolkit.logger.debug(f"Stored summary: {item.summary}")
      +        summary = self._normalize(item.summary)
      +        raw = self._normalize(raw_text)
      +        self.db.execute(
      +            "INSERT INTO kb_items(summary, raw_text) VALUES (?, ?)",
      +            (summary, raw),
      +        )
      +        self.db.commit()
      +        self.toolkit.logger.debug(f"Stored item summary={summary[:120]!r}")
       
           def read(self, query: Query) -> str:
      -        self.toolkit.logger.debug(f"Query: {query.raw}, summaries: {len(self.summaries)}, observations: {len(self.observations)}")
      -        if not self.summaries and not self.observations:
      -            return "No information stored."
      -        summary_text = "\n".join(self.summaries)[:500]
      -        observation_text = "\n".join(self.observations)[:500]
      -        result = summary_text + "\n" + observation_text
      -        return result[:1000]
      +        q = self._normalize(query.raw)
      +        q_tokens = self._tokens(q)
      +        self.toolkit.logger.debug(f"Read query={q!r}, tokens={q_tokens}")
      +
      +        rows = self.db.execute(
      +            "SELECT id, summary, raw_text FROM kb_items ORDER BY id DESC LIMIT 500"
      +        ).fetchall()
      +        if not rows:
      +            return "No information stored."
      +
      +        # Score rows by overlap with query tokens; summary matches are weighted higher.
      +        scored: list[tuple[int, int, str, str]] = []
      +        q_lc = q.lower()
      +        for row_id, summary, raw in rows:
      +            s_lc = (summary or "").lower()
      +            r_lc = (raw or "").lower()
      +            score = 0
      +            for t in q_tokens:
      +                if t in s_lc:
      +                    score += 2
      +                elif t in r_lc:
      +                    score += 1
      +            if q_lc and (q_lc in s_lc or q_lc in r_lc):
      +                score += 5
      +            scored.append((score, row_id, summary or "", raw or ""))
      +
      +        scored.sort(key=lambda x: (x[0], x[1]), reverse=True)
      +        top = [x for x in scored if x[0] > 0][:6]
      +        if not top:
      +            # Fallback: return recent summaries so the caller still gets useful context.
      +            top = scored[:3]
      +
      +        # Keep output compact and focused; this directly improves downstream answer quality.
      +        snippets: list[str] = []
      +        seen = set()
      +        for score, row_id, summary, raw in top:
      +            text = summary if summary else raw
      +            text = self._normalize(text)
      +            if not text:
      +                continue
      +            text = text[:220]
      +            if text in seen:
      +                continue
      +            seen.add(text)
      +            snippets.append(f"- {text}")
      +
      +        result = "\n".join(snippets) if snippets else "No relevant information found."
      +        return result[:1000]
      *** End Patch
      ```
    ''',
    'patched_code': '''
      import re
      from dataclasses import dataclass, field
      
      INSTRUCTION_KNOWLEDGE_ITEM = "Extract concrete, checkable facts from the text. Prefer short factual statements with names, attributes, values, dates, and relationships."
      INSTRUCTION_QUERY = "Convert the user question into a focused search query using the key entities, attributes, and terms needed to find an exact fact."
      INSTRUCTION_RESPONSE = "Answer using only retrieved knowledge. Be concise and factual; if the fact is missing, reply exactly: I don't know."
      ALWAYS_ON_KNOWLEDGE = "Prioritize exact entity-attribute-value facts (e.g., 'Alice favorite color blue') and avoid speculation."
      
      
      @dataclass
      class KnowledgeItem:
          """A summary of what was learnt from the source text."""
          summary: str = field(metadata={"description": "What you have learnt from the text"})
      
      
      @dataclass
      class Query:
          """Raw text query to retrieve from the knowledge base."""
          raw: str = field(metadata={"description": "The query text to search for"})
      
      
      class KnowledgeBase:
          """Lightweight SQLite-backed KB with deterministic lexical retrieval."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              # We use sqlite so data handling is deterministic and fast under tight runtime limits.
              self.db = toolkit.db
              self.db.execute(
                  """
                  CREATE TABLE IF NOT EXISTS kb_items (
                      id INTEGER PRIMARY KEY AUTOINCREMENT,
                      summary TEXT NOT NULL,
                      raw_text TEXT NOT NULL
                  )
                  """
              )
              self.db.commit()
              self.toolkit.logger.debug("KnowledgeBase initialized with table kb_items")
      
          def _normalize(self, text: str) -> str:
              # Normalization improves token matching robustness across punctuation/casing variants.
              return re.sub(r"\s+", " ", (text or "").strip())
      
          def _tokens(self, text: str) -> list[str]:
              # Simple lexical tokens are cheap and work well for factual lookup.
              return re.findall(r"[a-z0-9]+", text.lower())
      
          def write(self, item: KnowledgeItem, raw_text: str) -> None:
              summary = self._normalize(item.summary)
              raw = self._normalize(raw_text)
              self.db.execute(
                  "INSERT INTO kb_items(summary, raw_text) VALUES (?, ?)",
                  (summary, raw),
              )
              self.db.commit()
              self.toolkit.logger.debug(f"Stored item summary={summary[:120]!r}")
      
          def read(self, query: Query) -> str:
              q = self._normalize(query.raw)
              q_tokens = self._tokens(q)
              self.toolkit.logger.debug(f"Read query={q!r}, tokens={q_tokens}")
      
              rows = self.db.execute(
                  "SELECT id, summary, raw_text FROM kb_items ORDER BY id DESC LIMIT 500"
              ).fetchall()
              if not rows:
                  return "No information stored."
      
              # Score rows by overlap with query tokens; summary matches are weighted higher.
              scored: list[tuple[int, int, str, str]] = []
              q_lc = q.lower()
              for row_id, summary, raw in rows:
                  s_lc = (summary or "").lower()
                  r_lc = (raw or "").lower()
                  score = 0
                  for t in q_tokens:
                      if t in s_lc:
                          score += 2
                      elif t in r_lc:
                          score += 1
                  if q_lc and (q_lc in s_lc or q_lc in r_lc):
                      score += 5
                  scored.append((score, row_id, summary or "", raw or ""))
      
              scored.sort(key=lambda x: (x[0], x[1]), reverse=True)
              top = [x for x in scored if x[0] > 0][:6]
              if not top:
                  # Fallback: return recent summaries so the caller still gets useful context.
                  top = scored[:3]
      
              # Keep output compact and focused; this directly improves downstream answer quality.
              snippets: list[str] = []
              seen = set()
              for score, row_id, summary, raw in top:
                  text = summary if summary else raw
                  text = self._normalize(text)
                  if not text:
                      continue
                  text = text[:220]
                  if text in seen:
                      continue
                  seen.add(text)
                  snippets.append(f"- {text}")
      
              result = "\n".join(snippets) if snippets else "No relevant information found."
              return result[:1000]
  
    ''',
    'prompt': '''
      You are an expert Python programmer specializing in knowledge base system design.
      
      Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, identify the root cause of each failure and improve the program.
      
      <interface_spec>
      You are designing a Knowledge Base Program that implements three classes:
      
      1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
         - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
         - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
      
      2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - Same JSON-compatible type restriction and field description support as KnowledgeItem
      
      3. **KnowledgeBase** (class): The core knowledge base system.
         - `__init__(self, toolkit)`: Receives a Toolkit with:
           - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
           - `toolkit.chroma`: chromadb ephemeral client
           - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
           - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
         - `write(self, item: KnowledgeItem, raw_text: str) -> None`: Store information. `raw_text` is the original source text that produced the knowledge item.
         - `read(self, query: Query) -> str`: Retrieve relevant information as a string
      
      Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
      
      ## Runtime Constraints
      
      These limits are enforced during evaluation. Violating them results in score = 0.
      
      - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
      - **`write()` / `read()` timeout**: Each call must complete within **15 seconds**. Avoid expensive computation in these methods.
      - **`toolkit.llm_completion()` budget**: At most **1 LLM call per `write()` or `read()` invocation**. The budget resets before each call. Use the single call wisely (e.g., query-focused summarization in `read()`); prefer deterministic retrieval (SQL, text matching) when possible.
      
      ## Instruction Constants (required)
      
      Four module-level string constants provide the natural-language instructions used in task agent prompts:
      
      - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
      - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Use this to steer the task agent's behavior and decision-making. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
      
      INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
      
      </interface_spec>
      
      <rules>
      1. Output your diagnosis first, then your changes as a patch using the format below.
      2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
      3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
      4. `read()` must return at most 1000 characters — do not return all stored text.
      5. Keep it simple. Make minimal, targeted fixes.
      6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
      7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
      </rules>
      
      <patch_format>
      Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
      
      Format:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ <optional context hint>
       context line (1-2 lines before change)
      -removed line
      +added line
       context line (1-2 lines after change)
      *** End Patch
      ```
      
      Rules:
      - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
      - Include 1-2 context lines before and after each change for anchoring.
      - Multiple hunks are allowed within one `*** Update File` block.
      
      Example — replacing a return value:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ return statement
       def read(self, query: Query) -> str:
      -    return "\n".join(self.store)
      +    return "\n".join(self.store[-5:])
      *** End Patch
      ```
      </patch_format>
      
      <current_program iteration="1">
      ```python
      from dataclasses import dataclass, field
      
      INSTRUCTION_KNOWLEDGE_ITEM = "Summarize the key information from the text."
      INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          """A summary of what was learnt from the source text."""
          summary: str = field(metadata={"description": "What you have learnt from the text"})
      
      
      @dataclass
      class Query:
          """Raw text query to retrieve from the knowledge base."""
          raw: str = field(metadata={"description": "The query text to search for"})
      
      
      class KnowledgeBase:
          """Simple append-all / return-all knowledge base."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.summaries: list[str] = []
              self.observations: list[str] = []
      
          def write(self, item: KnowledgeItem, raw_text: str) -> None:
              self.summaries.append(item.summary)
              self.observations.append(raw_text)
              self.toolkit.logger.debug(f"Stored summary: {item.summary}")
      
          def read(self, query: Query) -> str:
              self.toolkit.logger.debug(f"Query: {query.raw}, summaries: {len(self.summaries)}, observations: {len(self.observations)}")
              if not self.summaries and not self.observations:
                  return "No information stored."
              summary_text = "\n".join(self.summaries)[:500]
              observation_text = "\n".join(self.observations)[:500]
              result = summary_text + "\n" + observation_text
              return result[:1000]
      
      ```
      </current_program>
      
      <evaluation_score>0.200</evaluation_score>
      
      
      The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
      
      <failed_cases>
      <case id="1">
      <question>What is Alice's favorite color?</question>
      <expected>blue</expected>
      <model_generation>I don't know</model_generation>
      <score>0.0</score>
      <conversation>
        [user]: What is Alice's favorite color?
        [assistant]: I don't know
      </conversation>
      </case>
      
      </failed_cases>
      
      <task>
      1. Diagnose why these cases fail.
      2. Propose specific improvements to the Knowledge Base Program.
      3. Output your changes as a patch.
      </task>
    ''',
  })
# ---
# name: test_query_generation
  dict({
    'output': '''
      {
        "raw": "capital of France"
      }
    ''',
    'prompt': '''
      Given the following question, generate a query to retrieve relevant memory.
      
      Question: What is the capital of France?
      
      The query must be a JSON object matching this schema:
      // Query: Raw text query to retrieve from the knowledge base.
      {
        "raw": "..."  // str, The query text to search for
      }
      
      Respond with the JSON only.
    ''',
  })
# ---
# name: test_reflection
  dict({
    'output': '''
      Diagnosis
      - **Root cause of failure:** `read()` ignores the query semantics and mostly returns a truncated dump of all stored summaries/raw text. This makes retrieval noisy and often omits the needed fact, so the answering model defaults to “I don't know.”
      - **Specific issue in case 1:** For “What is the capital of France?”, the system does no keyword/entity matching (e.g., `capital`, `france`), so the returned context may not contain “Paris” in a clear, high-signal way.
      - **Secondary issue:** Instructions are too generic and do not strongly steer extraction/querying/answering toward atomic factual retrieval.
      
      Below is a minimal targeted fix: store items in SQLite, rank by token overlap with query, return only top relevant snippets (bounded), and strengthen prompt instructions.
      
      ```patch
      *** Begin Patch
      *** Update File: program.py
      @@
      -from dataclasses import dataclass, field
      +from dataclasses import dataclass, field
      +import re
      @@
      -INSTRUCTION_KNOWLEDGE_ITEM = "Summarize the key information from the text."
      -INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      -INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      -ALWAYS_ON_KNOWLEDGE = ""
      +INSTRUCTION_KNOWLEDGE_ITEM = (
      +    "Extract concise, factual knowledge from the source text. Prefer atomic facts "
      +    "(who/what/when/where relationships) that are directly useful for question answering."
      +)
      +INSTRUCTION_QUERY = (
      +    "Convert the user question into a focused retrieval query that preserves key entities, "
      +    "terms, and constraints."
      +)
      +INSTRUCTION_RESPONSE = (
      +    "Answer using the retrieved knowledge. If the fact is present, respond with the direct answer "
      +    "in one short sentence (or just the value). Do not add extra explanation."
      +)
      +ALWAYS_ON_KNOWLEDGE = (
      +    "Prioritize exact factual matches from memory. Prefer specific answers over uncertainty when "
      +    "supporting facts are present."
      +)
      @@
       class KnowledgeBase:
      -    """Simple append-all / return-all knowledge base."""
      +    """SQLite-backed KB with lightweight lexical ranking.
      +
      +    Design goal:
      +    - Keep writes cheap and deterministic.
      +    - Make reads query-focused (not dump-all), so downstream answering sees the right fact.
      +    """
       
           def __init__(self, toolkit):
               self.toolkit = toolkit
      -        self.summaries: list[str] = []
      -        self.observations: list[str] = []
      +        self.db = toolkit.db
      +        # WHY: durable structured storage lets us rank and filter at read time.
      +        self.db.execute(
      +            """
      +            CREATE TABLE IF NOT EXISTS kb_items (
      +                id INTEGER PRIMARY KEY AUTOINCREMENT,
      +                summary TEXT NOT NULL,
      +                raw_text TEXT NOT NULL
      +            )
      +            """
      +        )
      +        self.db.execute("CREATE INDEX IF NOT EXISTS idx_kb_items_id ON kb_items(id)")
      +        self.db.commit()
      +
      +    @staticmethod
      +    def _tokenize(text: str) -> set[str]:
      +        """Simple JSON-safe lexical tokenization for deterministic ranking."""
      +        tokens = set(re.findall(r"[a-z0-9]+", (text or "").lower()))
      +        # Minimal stopword removal improves signal for short factual queries.
      +        stop = {"the", "a", "an", "is", "are", "of", "to", "in", "on", "and", "what", "who", "when", "where"}
      +        return {t for t in tokens if t not in stop}
       
           def write(self, item: KnowledgeItem, raw_text: str) -> None:
      -        self.summaries.append(item.summary)
      -        self.observations.append(raw_text)
      -        self.toolkit.logger.debug(f"Stored summary: {item.summary}")
      +        self.db.execute(
      +            "INSERT INTO kb_items(summary, raw_text) VALUES(?, ?)",
      +            (item.summary or "", raw_text or ""),
      +        )
      +        self.db.commit()
      +        self.toolkit.logger.debug(f"Stored summary: {item.summary}")
       
           def read(self, query: Query) -> str:
      -        self.toolkit.logger.debug(f"Query: {query.raw}, summaries: {len(self.summaries)}, observations: {len(self.observations)}")
      -        if not self.summaries and not self.observations:
      +        q = (query.raw or "").strip()
      +        q_tokens = self._tokenize(q)
      +        self.toolkit.logger.debug(f"Read query='{q}' tokens={sorted(q_tokens)}")
      +
      +        rows = self.db.execute(
      +            "SELECT id, summary, raw_text FROM kb_items ORDER BY id DESC LIMIT 300"
      +        ).fetchall()
      +        if not rows:
                   return "No information stored."
      -        summary_text = "\n".join(self.summaries)[:500]
      -        observation_text = "\n".join(self.observations)[:500]
      -        result = summary_text + "\n" + observation_text
      -        return result[:1000]
      +
      +        # WHY: overlap-based ranking is fast, deterministic, and works well for factual lookup.
      +        scored = []
      +        for row_id, summary, raw_text in rows:
      +            s_tokens = self._tokenize(summary)
      +            r_tokens = self._tokenize(raw_text)
      +            overlap_s = len(q_tokens & s_tokens)
      +            overlap_r = len(q_tokens & r_tokens)
      +            score = overlap_s * 3 + overlap_r  # summary is higher-signal than raw text
      +            if q_tokens:
      +                scored.append((score, row_id, summary, raw_text))
      +            else:
      +                # Empty query fallback: rely on recency.
      +                scored.append((0, row_id, summary, raw_text))
      +
      +        # Keep best matches; if no positive match, fall back to most recent few entries.
      +        scored.sort(key=lambda x: (x[0], x[1]), reverse=True)
      +        top = [x for x in scored if x[0] > 0][:5]
      +        if not top:
      +            top = scored[:3]
      +
      +        # Build concise retrieval context; strict cap prevents overlong outputs.
      +        parts = []
      +        for score, row_id, summary, raw_text in top:
      +            summary_clean = (summary or "").strip()
      +            raw_clean = re.sub(r"\s+", " ", (raw_text or "").strip())
      +            if not summary_clean:
      +                summary_clean = raw_clean[:220]
      +            line = f"- {summary_clean}"
      +            # Include short source hint only when it adds information.
      +            if raw_clean and raw_clean[:120] not in summary_clean:
      +                line += f" | source: {raw_clean[:120]}"
      +            parts.append(line)
      +
      +        result = "Relevant knowledge:\n" + "\n".join(parts)
      +        return result[:1000]
       
      *** End Patch
      ```
    ''',
    'prompt': '''
      You are an expert Python programmer specializing in knowledge base system design.
      
      Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, identify the root cause of each failure and improve the program.
      
      <interface_spec>
      You are designing a Knowledge Base Program that implements three classes:
      
      1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
         - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
         - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
      
      2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - Same JSON-compatible type restriction and field description support as KnowledgeItem
      
      3. **KnowledgeBase** (class): The core knowledge base system.
         - `__init__(self, toolkit)`: Receives a Toolkit with:
           - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
           - `toolkit.chroma`: chromadb ephemeral client
           - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
           - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
         - `write(self, item: KnowledgeItem, raw_text: str) -> None`: Store information. `raw_text` is the original source text that produced the knowledge item.
         - `read(self, query: Query) -> str`: Retrieve relevant information as a string
      
      Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
      
      ## Runtime Constraints
      
      These limits are enforced during evaluation. Violating them results in score = 0.
      
      - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
      - **`write()` / `read()` timeout**: Each call must complete within **15 seconds**. Avoid expensive computation in these methods.
      - **`toolkit.llm_completion()` budget**: At most **1 LLM call per `write()` or `read()` invocation**. The budget resets before each call. Use the single call wisely (e.g., query-focused summarization in `read()`); prefer deterministic retrieval (SQL, text matching) when possible.
      
      ## Instruction Constants (required)
      
      Four module-level string constants provide the natural-language instructions used in task agent prompts:
      
      - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
      - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
      - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Use this to steer the task agent's behavior and decision-making. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
      
      INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
      
      </interface_spec>
      
      <rules>
      1. Output your diagnosis first, then your changes as a patch using the format below.
      2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
      3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
      4. `read()` must return at most 1000 characters — do not return all stored text.
      5. Keep it simple. Make minimal, targeted fixes.
      6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
      7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
      </rules>
      
      <patch_format>
      Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
      
      Format:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ <optional context hint>
       context line (1-2 lines before change)
      -removed line
      +added line
       context line (1-2 lines after change)
      *** End Patch
      ```
      
      Rules:
      - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
      - Include 1-2 context lines before and after each change for anchoring.
      - Multiple hunks are allowed within one `*** Update File` block.
      
      Example — replacing a return value:
      ```
      *** Begin Patch
      *** Update File: program.py
      @@ return statement
       def read(self, query: Query) -> str:
      -    return "\n".join(self.store)
      +    return "\n".join(self.store[-5:])
      *** End Patch
      ```
      </patch_format>
      
      <current_program iteration="1">
      ```python
      from dataclasses import dataclass, field
      
      INSTRUCTION_KNOWLEDGE_ITEM = "Summarize the key information from the text."
      INSTRUCTION_QUERY = "Given the following question, generate a query to retrieve relevant knowledge."
      INSTRUCTION_RESPONSE = "Based on the above knowledge and the original question, provide a short answer without explanation."
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          """A summary of what was learnt from the source text."""
          summary: str = field(metadata={"description": "What you have learnt from the text"})
      
      
      @dataclass
      class Query:
          """Raw text query to retrieve from the knowledge base."""
          raw: str = field(metadata={"description": "The query text to search for"})
      
      
      class KnowledgeBase:
          """Simple append-all / return-all knowledge base."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.summaries: list[str] = []
              self.observations: list[str] = []
      
          def write(self, item: KnowledgeItem, raw_text: str) -> None:
              self.summaries.append(item.summary)
              self.observations.append(raw_text)
              self.toolkit.logger.debug(f"Stored summary: {item.summary}")
      
          def read(self, query: Query) -> str:
              self.toolkit.logger.debug(f"Query: {query.raw}, summaries: {len(self.summaries)}, observations: {len(self.observations)}")
              if not self.summaries and not self.observations:
                  return "No information stored."
              summary_text = "\n".join(self.summaries)[:500]
              observation_text = "\n".join(self.observations)[:500]
              result = summary_text + "\n" + observation_text
              return result[:1000]
      
      ```
      </current_program>
      
      <evaluation_score>0.300</evaluation_score>
      
      
      The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
      
      <failed_cases>
      <case id="1">
      <question>What is the capital of France?</question>
      <expected>Paris</expected>
      <model_generation>I don't know</model_generation>
      <score>0.0</score>
      <conversation>
        [user]: What is the capital of France?
        [assistant]: I don't know
      </conversation>
      </case>
      
      </failed_cases>
      
      <task>
      1. Diagnose why these cases fail.
      2. Propose specific improvements to the Knowledge Base Program.
      3. Output your changes as a patch.
      </task>
    ''',
  })
# ---
# name: test_reflection_recovery
  dict({
    'reflected_code': '''
      import re
      from dataclasses import dataclass, field
      
      INSTRUCTION_KNOWLEDGE_ITEM = (
          "Extract the most useful factual memory from the source text as a concise string. "
          "Prefer exact values (codes, IDs, names, dates, numbers) and keep key wording intact."
      )
      INSTRUCTION_QUERY = (
          "Convert the user question into a short retrieval-oriented search string. "
          "Keep critical entities and requested attribute names."
      )
      INSTRUCTION_RESPONSE = (
          "Answer using retrieved memory only. Be concise and precise. "
          "If a direct value is present (e.g., access code), return that value clearly."
      )
      ALWAYS_ON_KNOWLEDGE = (
          "Prioritize exact factual matches. Keep identifiers and codes verbatim."
      )
      
      
      @dataclass
      class KnowledgeItem:
          """Single memory string extracted from source text."""
          raw: str = field(
              metadata={
                  "description": "Concise factual memory to store; include exact values like codes and IDs."
              }
          )
      
      
      @dataclass
      class Query:
          """Short retrieval query string."""
          raw: str = field(
              metadata={
                  "description": "Search phrase describing what fact should be retrieved from memory."
              }
          )
      
      
      class KnowledgeBase:
          """Simple lexical memory store with deterministic retrieval.
      
          Why this design:
          - Deterministic matching is fast and robust under the 15s runtime limit.
          - No LLM call is required for retrieval, preserving call budget.
          - Returning only top hits prevents overlong outputs and improves precision.
          """
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store: list[str] = []
      
          def write(self, item: KnowledgeItem, raw_text: str) -> None:
              # Prefer structured extraction from item.raw; fall back to raw_text if needed.
              text = (item.raw or "").strip() or (raw_text or "").strip()
              if not text:
                  self.toolkit.logger.debug("write(): skipped empty knowledge item")
                  return
      
              self.store.append(text)
              self.toolkit.logger.debug(
                  f"write(): stored item #{len(self.store)} preview={text[:80]!r}"
              )
      
          def read(self, query: Query) -> str:
              q = (query.raw or "").strip()
              self.toolkit.logger.debug(
                  f"read(): query={q[:80]!r}, store_size={len(self.store)}"
              )
      
              if not self.store:
                  return "No information stored."
      
              # If query is empty, return most recent memory (smallest surprising behavior).
              if not q:
                  out = self.store[-1]
                  return out[:1000]
      
              q_lower = q.lower()
              tokens = [t for t in re.findall(r"[a-z0-9]+", q_lower) if len(t) > 1]
      
              scored: list[tuple[int, int, str]] = []
              for i, text in enumerate(self.store):
                  t_lower = text.lower()
                  score = 0
      
                  # Strong boost for phrase-level containment.
                  if q_lower and q_lower in t_lower:
                      score += 10
      
                  # Token overlap gives robust matching for paraphrases.
                  for tok in tokens:
                      if tok in t_lower:
                          score += 1
      
                  if score > 0:
                      scored.append((score, i, text))
      
              if not scored:
                  # Helpful fallback: return the most recent memory instead of a hard failure.
                  out = self.store[-1]
                  self.toolkit.logger.debug("read(): no lexical match, returning latest item")
                  return out[:1000]
      
              # Highest score first; newer items win ties.
              scored.sort(key=lambda x: (x[0], x[1]), reverse=True)
              top_texts = [t for _, _, t in scored[:3]]
              result = "\n".join(f"- {t}" for t in top_texts)
      
              # Enforce required output cap.
              if len(result) > 1000:
                  result = result[:997] + "..."
              return result
  
    ''',
    'round1_score': 0.0,
    'round2_output': 'DELTA-7742',
    'round2_score': 1.0,
  })
# ---
# name: test_retrieved_memory_answer
  dict({
    'step1_output': '''
      {
        "raw": "capital of France"
      }
    ''',
    'step1_prompt': '''
      Given the following question, generate a query to retrieve relevant memory.
      
      Question: What is the capital of France?
      
      The query must be a JSON object matching this schema:
      // Query: Raw text query to retrieve from the knowledge base.
      {
        "raw": "..."  // str, The query text to search for
      }
      
      Respond with the JSON only.
    ''',
    'step2_output': 'The capital of France is Paris.',
    'step2_prompt': '''
      <retrieved_memory>
      The capital of France is Paris.
      </retrieved_memory>
      
      Based on the above memory and the original question, provide your answer.
    ''',
  })
# ---
# name: test_runtime_violation_fix_oversized_read
  dict({
    'fixed_code': '''
      from dataclasses import dataclass
      
      INSTRUCTION_KNOWLEDGE_ITEM = ""
      INSTRUCTION_QUERY = ""
      INSTRUCTION_RESPONSE = ""
      ALWAYS_ON_KNOWLEDGE = ""
      
      
      @dataclass
      class KnowledgeItem:
          raw: str
      
      
      @dataclass
      class Query:
          raw: str
      
      
      class KnowledgeBase:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store: list[str] = []
      
          def write(self, item: KnowledgeItem, raw_text: str = "") -> None:
              self.store.append(item.raw)
      
          def read(self, query: Query) -> str:
              return "x" * 1000
  
    ''',
    'runtime_violation': 'kb.read() returned 5000 chars (limit: 1000)',
  })
# ---
# name: test_toolkit_llm_completion
  dict({
    'output': '5',
    'prompt': 'What is 2 + 3? Answer with just the number.',
  })
# ---
